- hibernate speed up